# autonomous-ai-engine

./: .dockerignore  .gitignore  Dockerfile  OPTIMIZATION_REPORT.md  README.md  __main__.py  demo_full.py  demo_simple.py  demo_workflow.py  docker-compose.yml  generate_security.py  pyproject.toml  requirements.txt  test_api.py  test_full.py  test_import.py  test_quick.py  test_request.py  webui.py
.github/workflows/: ci.yml
agent/: __init__.py  agent_core.py  memory_system.py  task_planner.py
api/: __init__.py  fastapi_server.py  routes.py  server.py
cache/: __init__.py  redis_cache.py
context/: __init__.py
core/: agent.py  engine.py  memory.py  planner.py
db/: advanced_queries.py  database.py  models.py  query.py
evaluation/: __init__.py  benchmark.py  evaluator.py  feedback.py  metrics.py
evolve/: auto_coder.py  auto_repair.py  collaboration.py  engine.py
llm/: context_optimizer.py  model_manager.py  parser.py  prompt.py  prompt_engine.py  provider.py
mcp/: protocol.py
monitoring/: __init__.py  metrics.py
multiagent/: __init__.py  system.py
rag/: chunker.py  document_processor.py  retriever.py  store.py  vector_store.py
reasoning/: __init__.py  chain_of_thought.py
sandbox/: __init__.py
scheduler/: engine.py  task_scheduler.py
security/: __init__.py  analyzer.py
skills/: __init__.py  context_manager.py
tests/: test_agent.py  test_db.py  test_llm.py  test_memory.py  test_rag.py  test_scheduler.py  test_utils.py
tools/: executor.py  registry.py
utils/: config.py  helpers.py  logger.py
validation/: __init__.py  input_validator.py
webhooks/: handler.py
workflow/: engine.py
